core/renderloop: only delay scheduling repaints while vrr is active, don't entirely drop them

Otherwise, the following situation can happen
- effect tries to schedule a repaint, which gets ignored because the window has at least 30fps
- the window stops updating
- the effect's last frame is stuck on the screen, until something else triggers a repaint

BUG: 493940